--- a/app/src/main/res/layout/activity_specifc_country.xml
+++ b/app/src/main/res/layout/activity_specifc_country.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#090E21"
     android:padding="@dimen/_10sdp"
-    tools:context=".Activities.SpecifCountryActivity">
+    tools:context=".Activities.SpecifiCountryActivity">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
